obj/busybox-exporter.yml
#apiVersion: v1
#kind: Service
#metadata:
#  name: busyboxexporter
#spec:
#  ports:
#    - port: 8888
#  selector:
#    app: busyboxexporter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busyboxexporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busyboxexporter
  template:
    metadata:
      labels:
        app: busyboxexporter
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port:   '8888'
        prometheus.io/path:   '/cgi-bin/metrics'
    spec:
      containers:
        - name: meinexporter
          image: busybox
          args:
            - busybox
            - httpd
            - -f
            - -p
            - '8888'
            - -h
            - /www
          volumeMounts:
            - name: cgi-script
              mountPath: /www/cgi-bin
      volumes:
        - name: cgi-script
          configMap:
            name: busyboxexporter
            defaultMode: 0555
