obj/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: www
spec:
  shareProcessNamespace: true
  terminationGracePeriodSeconds: 2
  containers:
  - name: meinserver
    image: erkules/nginxhostname
  - name: binauchda
    image: alpine
    command:
    - sleep
    - "50000"
