obj/mysql-client-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqlclien
spec:
  ports:
  - port: 8080
  selector:
    app: mysqlclient
