obj/deployment-ing.yml
apiVersion: extensions/v1beta1
kind:       Ingress
metadata:
  name: www
spec:
  rules:
  - host: meineapp.erkmerk.de
    http:
      paths:
      - path: /
        backend:
          serviceName: www 
          servicePort:  80
